# CSCI4831-final-project

./: README.md  pyproject.toml
csci4831final/: __init__.py  clusters.py  get_points.py  main.py  testing_grabcut.py  vbg.py
demo/: demo.py
results/: all_results.csv  avg_results.csv
