[tool.poetry]
name = "csci4831final"
version = "0.1.0"
description = ""
authors = ["Lara Chunko", "Ryan Drew"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
opencv-python = "^4.5.1"
matplotlib = "^3.4.1"
pyamg = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
